--- a/03_Regular_Page/css/responsive.css
+++ b/03_Regular_Page/css/responsive.css
@@ -207,3 +207,18 @@
 	
 	
 }
+
+/* lock scrollbar color everywhere */
+* {
+	scrollbar-color: #CCC3BD transparent !important;
+  }
+  
+  ::-webkit-scrollbar-thumb,
+  ::-webkit-scrollbar-thumb:hover,
+  ::-webkit-scrollbar-thumb:active {
+	background-color: #CCC3BD !important;
+  }
+  
+  ::-webkit-scrollbar-track {
+	background: transparent !important;
+  }
